--- a/css/style.css
+++ b/css/style.css
@@ -31,15 +31,16 @@ main{
 
 .heading {
     margin-bottom: 1.5rem;
-    font-size: 1.2rem;
+    font-size: 1.2em;
 }
 
 .searchInputWrapper {
     position: relative;
+    width: 100%;
 }
 
 .searchInput {
-    width: 20rem;
+    width: 100%;
     height: 2rem;
     padding: 0 1rem; 
     border-radius: 2rem;
@@ -49,6 +50,7 @@ main{
 
 ::placeholder {
     color: #a1a1a1;
+    font-size: 0.8em;
 }
 
 /* hide the placeholder text on focus */
@@ -77,6 +79,21 @@ main{
 
 /*end of search bar style */
 
+/*welcome text style*/
+#welcome{
+    font-size: 1.6em;
+    color: #656565;
+    margin-left: 12%;
+}
+
+#citations{
+    font-size: 1em;
+    color: #ADACAC;
+    margin-left: 12%;
+}
+
+/*end of welcome text style*/
+
 
 /*map style*/
 
@@ -85,3 +102,6 @@ main{
     width: 98%; 
     margin-top:1%
 }
+
+
+/*end of map style*/
