default configuration change

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -7,7 +7,7 @@
 
 
 body{
-    background-color:#F7DDC4 ;
+    background-color:#af2179 ;
     overflow: hidden;
 }
 
@@ -18,6 +18,10 @@ nav{
 
 main{
     height: 100vh;
+}
+
+label{
+    color: #a1a1a1;
 }
 
 /*search bar style */ 
@@ -104,20 +108,17 @@ main{
 
 .filtrer{ 
     font-size: 1em;
-    color: #656565;   
+    color: #3b3b3b;   
 }
-.filtrage-box form{
-margin-top: 10%;
-margin-bottom: 10%; 
-}
+
 
 .filtrage-box span {
 	position: relative;
     width: 100%;
-    color: #a1a1a1;
+    color: #3b3b3b; 
 }
 
-.filtrage-box label:before {
+.zone label:before {
     content: "";
     width: 15px;
     height: 15px;
@@ -129,7 +130,7 @@ margin-bottom: 10%;
     border-radius: 50%;
 }
 
-.filtrage-box input[type="radio"] {
+.zone input[type="radio"]{
 	opacity: 0;
 	display: inline-block;
 	z-index: 100;
@@ -140,7 +141,7 @@ margin-bottom: 10%;
 	cursor: pointer;
 }
 
-.filtrage-box .bullet {
+.zone .bullet {
     position: absolute;
     width: 20px;
     height: 20px;
@@ -152,7 +153,46 @@ margin-bottom: 10%;
     border-radius: 50%;
 }
 
-.filtrage-box input[type="radio"]:checked ~ .bullet {
+.zone input[type="radio"]:checked ~ .bullet {
+	opacity: 1;
+}
+
+.temp label:before {
+    content: "";
+    width: 15px;
+    height: 15px;
+    background: white;
+    box-shadow: 0.5px 0.5px 1px #a1a1a1;
+    position: absolute;
+    left: 4%;
+    top: 16%;
+    border-radius: 10%;
+}
+
+.temp input[type="checkbox"]{
+	opacity: 0;
+	display: inline-block;
+	z-index: 100;
+	margin: 0;
+	padding: 0;
+    width: 10%;
+	position: relative;
+	cursor: pointer;
+}
+
+.temp .bullet-square {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color:#F7DDC4 ;
+    left: 0%;
+    top: 0px;
+    border: 2px solid #ffffff;
+    opacity: 0;
+    border-radius: 10%;
+}
+
+.temp input[type="checkbox"]:checked ~ .bullet-square {
 	opacity: 1;
 }
 
