--- a/client/css/style.css
+++ b/client/css/style.css
@@ -102,20 +102,20 @@ label{
 /*filtre style*/
 
 .filtrage-box{
-    margin-top: 12%;
+    margin-top: 10%;
     margin-left: 12%;
 }
 
 .filtrer{ 
     font-size: 1em;
-    color: #3b3b3b;   
+    color: #656565;   
 }
 
 
 .filtrage-box span {
 	position: relative;
     width: 100%;
-    color: #3b3b3b; 
+    color: #656565; 
 }
 
 .zone label:before {
@@ -157,6 +157,20 @@ label{
 	opacity: 1;
 }
 
+
+/*kiwi styling*/
+.kiwi-text{
+    margin-right: 5%;
+    padding: 5%;
+    text-align: center;
+    margin-top: -7%;
+    color: #3b3b3b; 
+    background-color: #F7DDC4;
+    font-size: 10px;
+    border-radius: 70%;
+}
+
+
 .temp label:before {
     content: "";
     width: 15px;
@@ -195,6 +209,18 @@ label{
 .temp input[type="checkbox"]:checked ~ .bullet-square {
 	opacity: 1;
 }
+
+
+.filtrage-box input[type="submit"]{
+    margin-left:30%;
+    margin-top: 5%;
+	padding: 2% 5% 2% 5%;
+	background-color:#F7DDC4;
+    color: #3b3b3b;
+    border:none;
+}
+
+
 
 
 ::-webkit-datetime-edit-text { padding: 0 0.3em; }
