--- a/client/css/style.css
+++ b/client/css/style.css
@@ -161,11 +161,13 @@ label{
 /*kiwi styling*/
 .kiwi-text{
     margin-right: 5%;
-    padding: 5%;
+    padding: 5% 2% 5% 2%;
+    width: 200px;
+    height: 70px;
     text-align: center;
     margin-top: -7%;
     color: #3b3b3b; 
-    background-color: #F7DDC4;
+    background-color: #f7ddc44b;
     font-size: 10px;
     border-radius: 70%;
 }
@@ -214,8 +216,9 @@ label{
 .filtrage-box input[type="submit"]{
     margin-left:30%;
     margin-top: 5%;
+    margin-bottom: 6%;
 	padding: 2% 5% 2% 5%;
-	background-color:#F7DDC4;
+	background-color:#f7ddc477;
     color: #3b3b3b;
     border:none;
 }
