--- a/client/css/style.css
+++ b/client/css/style.css
@@ -88,15 +88,19 @@ label{
     left: 5%;
     top: 100%;
     width: 100%;
-    height: 400px;
+    height: 200px;
     z-index: 999;
     background-color: #ffffff;
-    color: #a1a1a1;
     overflow-y: scroll;
   }
 
 .off{
     display: none;
+}
+.toggled li button{
+    background-color: white;
+    border: none;
+    color: #a1a1a1;
 }
   
 /* end state */
